--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.box-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
 .box {
     height: 500px;
     width: 350px;
